# AnywhereDoor

./: .anywheredoorrc  .gitignore  .gitmodules  CLAUDE.md  README.ar.md  README.fr.md  README.hi.md  README.md  README.zh-CN.md  README.zh-TW.md  anywhere_door.sh  anywhere_door_core  anywhere_door_core.py  datastructures.py  dnsleaktest.py  install.sh  predefined_proxies.py
.github/workflows/: readme-tranlate.yml  release.yml
retired/python/: color_escape.py  datastructures.py  dnsleaktest.py
src/anywheredoor/: CMakeLists.txt  config.c  config.h  dnsleak.c  dnsleak.h  main.c  proxy.c  proxy.h  test.c  test.h  tui.c  tui.h  utils.c  utils.h
tools/IPQuality/: ip.sh
tools/NetQuality/: net.sh
tools/NetQuality/res/: output.json
